# batch_nl

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
batch_nl/: __init__.py  neighbourlist.py
examples/: benchmark_multiple_structure.ipynb  benchmark_single_structure.ipynb  usage.ipynb  usage.py
neighbourlist/: __init__.py  neighbourlist.py
pynl/: __init__.py  neighbourlist.py
tests/: test_carbon.py  test_nl_ON1_vs_vesin_ase.py  test_nl_ON2_vs_vesin_ase.py  test_nl_vs_vasin_ase.py  test_periodic.py  utils.py
