[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch_nl_torch"
version = "0.1.1"
description = "Efficient and batched PyTorch-based neighbour list builder for atomistic simulations"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
  { name = "Venkat Kapil" }
]

dependencies = [
  "torch>=1.12",
  "ase",
  "matscipy",
]

[project.urls]
Homepage = "https://github.com/venkatkapil24/batch_nl"
Repository = "https://github.com/venkatkapil24/batch_nl"

[tool.setuptools]
packages = ["batch_nl"]
